css/style.css
/* colors & themes */
._bg-black {
  background-color: #000;
  color: #fff;;
}
._bg-white {
  background-color: #fff;
  color: #000;;
}
._bg-grey {
  background-color: #242424;
  color: #fff;;
}
._bg-light-grey {
  background-color: rgb(176, 174, 173);
  color: #000;
}
._bg-dark-blue {
  background-color: rgb(17, 21, 45);
  color: #fff;
}
._bg-blue {
  background-color: rgb(16, 47, 138);
  color: #fff;
}
._bg-black {
  background-color: #000;
}

/* utility */
._grey-text-block {
  color: #777;
  font-size: 20px;
}

/* custom button */
.btn {
  border-radius: 40px;
  box-shadow: inset 0 0 2px transparent;
}

._btn-orange {
  background-color: rgb(191, 41, 15);
  border: 1px solid rgb(191, 41, 15);
  color: #fff;
}
._btn-orange:hover {
  box-shadow: inset 0 0 2px rgb(191, 41, 15);
}

._btn-blue {
  background-color: rgb(35, 74, 223);
  border: 1px solid rgb(35, 74, 223);
  color: #fff;
}
._btn-grey {
  background-color: rgb(208, 209, 212);
  border: 1px solid rgb(208, 209, 212);
  color: blue;
}
._btn-dark-grey {
  background-color: #414141;
  border: 1px solid #414141;
  color: #fff;
}
._btn-white {
  background-color: #fff;
  border: 1px solid #fff;
  color: #000;
}

/* header */
header ._pre-nav img {
  width: 80px;
  padding-right: 10px;
}

header ._pre-nav {
  height: 30px;

  display: flex;
  justify-content: flex-end;
  align-items: center;
}

header nav {
  height: 70px;
}

@media screen and (min-width: 992px) {
  nav ._drop.dropdown-menu {
    top: 70px;
    width: 100vw;
    border-radius: 0;
    margin: 0;
    border: none;
  }
}

nav ._drop ul._upper-dropdown-menu {
  list-style: none;
  text-align: center;
}
nav ._drop ul._lower-dropdown-menu {
  text-align: center;
}

nav ._drop ul._lower-dropdown-menu li {
  list-style: disc;   /* ? */
}

nav ._drop ul li {
  display: inline-block;
}

nav ._drop ul li img {
  max-width: 60px;
}

#search-btn img {
  width: 10%;
}

/* banner general classes */
#returnal-jumbo {
  margin-top: 100px;
}

._banner ._banner-content {
  margin-top: 100px;
  margin-bottom: 50px;
}

._banner-content img {
  width: 50%;
}

/* jumbotron banner */
#returnal-jumbo ._banner {
  background: url(../img/jumbo-bg.png) 50% 70%;
  background-size: cover;
}

/* jumbotron slideshow */
#returnal-slideshow ._thumb-container {
  display: block;
  border: 2px solid transparent;
  border-radius: 10px;
  position: relative;

  transition: all .1s ease-in-out;
}

/* questa transizione non funziona bene */
#returnal-slideshow ._thumb-container:hover {
  transition: all .5s ease-in-out;
  top: -10%;
  border-color: blue;
}
/* da sistemare in hotwell */

#returnal-slideshow ._thumb-container img {
  border-radius: 10px;
  padding: 3px;
}


/* ps5 */
#ps5 ._blue-sub-title {
  color: lightseagreen;
}

#ps5 ._text-container {
  padding: 30px 0;
}
@media screen and (min-width: 768px) {
  #ps5 ._text-container {
    padding: 100px 0;
  }
}
@media screen and (min-width: 992px) {
  #ps5 ._text-container {
    padding: 150px 0;
  }
}

/* accessories slideshow */
#ps5-accessories-slideshow a {
  display: block;
  height: 190px;
  text-decoration: none;
  color: #242424;
  text-align: center;

  opacity: .7;
  padding-bottom: 30px;
  border-bottom: 2px solid transparent;
  transition: all .4s linear;
}
#ps5-accessories-slideshow a img {
  width: 60%;
}


/* hover animation */
#ps5-accessories-slideshow a:hover {
  opacity: 1;
  border-color: blue;
}


/* it takes two banner */
#itTakesTwo ._banner {
  background: url(../img/it-takes-two-hero-banner-desktop.jpg) 50% 50%;
  background-size: cover;
}

/* nuove uscite */
#nuoveUscite ._game-item img {
  border-radius: 20px;
}

#nuoveUscite ._game-item {
  margin-bottom: 36px;
}

/* ps now */
._cta img {
  width: 60%;
}

/* social */
#social ._container {
  max-width: 540px;
}

/* footer */
footer ._logo-ps {
  width: 160px;
  margin-bottom: 24px;
}
footer ._logo-sie {
  width: 200px;
  margin-bottom: 24px;
}

footer ul {
  list-style: none;
}
footer ul li {
  margin-bottom: 12px;
}

